[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/scripts/playground.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/topcamera.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/toolbar.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/kenney_uipack-space/PNG/metalPanel_red.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral0.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/kenney_uipack-space/PNG/metalPanel.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral1.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral2.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral3.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral4.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral5.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral6.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral7.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral8.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/UI/numeral9.png" type="Texture" id=15]
[ext_resource path="res://assets/scripts/meteor1.gd" type="Script" id=16]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/Meteors/meteorBrown_big1.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/Meteors/meteorBrown_big2.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/Meteors/meteorBrown_big3.png" type="Texture" id=19]
[ext_resource path="res://assets/scripts/player.gd" type="Script" id=20]
[ext_resource path="res://assets/textures/kenney_spaceshooter-extension/PNG/Sprites/Astronauts/spaceAstronauts_017.png" type="Texture" id=21]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/Effects/speed.png" type="Texture" id=22]

[sub_resource type="DynamicFontData" id=2]

font_path = "res://assets/fonts/kenney_fonts/Fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=3]

size = 14
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 23.0805

[node name="playground" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="topcamera" type="Camera2D" parent="." index="0"]

position = Vector2( 511, 301 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 2 )

[node name="UI" type="Node2D" parent="." index="1"]

[node name="toolbar" type="Node2D" parent="UI" index="0"]

editor/display_folded = true
position = Vector2( 0, 565 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="tool0" type="Sprite" parent="UI/toolbar" index="0"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 35, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="label0" type="Sprite" parent="UI/toolbar" index="1"]

position = Vector2( 22, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="tool1" type="Sprite" parent="UI/toolbar" index="2"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 95, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label1" type="Sprite" parent="UI/toolbar" index="3"]

position = Vector2( 82, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="tool2" type="Sprite" parent="UI/toolbar" index="4"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 155, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label2" type="Sprite" parent="UI/toolbar" index="5"]

position = Vector2( 142, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="tool3" type="Sprite" parent="UI/toolbar" index="6"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 215, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label3" type="Sprite" parent="UI/toolbar" index="7"]

position = Vector2( 202, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="tool4" type="Sprite" parent="UI/toolbar" index="8"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 275, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label4" type="Sprite" parent="UI/toolbar" index="9"]

position = Vector2( 262, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="tool5" type="Sprite" parent="UI/toolbar" index="10"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 335, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label5" type="Sprite" parent="UI/toolbar" index="11"]

position = Vector2( 322, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="tool6" type="Sprite" parent="UI/toolbar" index="12"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 395, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label6" type="Sprite" parent="UI/toolbar" index="13"]

position = Vector2( 382, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="tool7" type="Sprite" parent="UI/toolbar" index="14"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 455, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label7" type="Sprite" parent="UI/toolbar" index="15"]

position = Vector2( 442, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="tool8" type="Sprite" parent="UI/toolbar" index="16"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 515, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label8" type="Sprite" parent="UI/toolbar" index="17"]

position = Vector2( 502, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="tool9" type="Sprite" parent="UI/toolbar" index="18"]

modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 575, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="label9" type="Sprite" parent="UI/toolbar" index="19"]

position = Vector2( 562, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]

[node name="game_version" type="Label" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 945.0
margin_top = 570.0
margin_right = 1020.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "V 0.1.0"
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="world" type="Node2D" parent="." index="2"]

[node name="background" type="ColorRect" parent="world" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4000.0
margin_top = -4000.0
margin_right = 4000.0
margin_bottom = 4000.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0859375, 0.0859375, 0.0859375, 1 )
_sections_unfolded = [ "Rect" ]

[node name="meteors" type="Node2D" parent="world" index="1"]

editor/display_folded = true
position = Vector2( 512, 300 )
_sections_unfolded = [ "Transform" ]

[node name="meteor1_0" type="KinematicBody2D" parent="world/meteors" index="0"]

editor/display_folded = true
position = Vector2( 188.31, -172.978 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 16 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="Sprite" type="Sprite" parent="world/meteors/meteor1_0" index="0"]

texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="world/meteors/meteor1_0" index="1"]

build_mode = 0
polygon = PoolVector2Array( 22.9487, -39.6652, -32.6613, -39.6652, -49.3443, 9.98659, -21.5393, 40.5721, 10.635, 28.2585, 33.2762, 32.2306, 49.1648, -0.738197 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="meteor2_0" type="KinematicBody2D" parent="world/meteors" index="1"]

editor/display_folded = true
position = Vector2( 214.444, 168.373 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 16 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="Sprite" type="Sprite" parent="world/meteors/meteor2_0" index="0"]

texture = ExtResource( 18 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="world/meteors/meteor2_0" index="1"]

build_mode = 0
polygon = PoolVector2Array( 7.84534, -47.7214, -39.4232, -38.9827, -59.6811, -5.61671, -54.1201, 25.366, -25.1235, 47.61, -10.0293, 33.3103, 43.9919, 17.8189, 58.6888, -28.2579 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="meteor3_0" type="KinematicBody2D" parent="world/meteors" index="2"]

position = Vector2( -356.047, 54.2551 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 16 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="Sprite" type="Sprite" parent="world/meteors/meteor3_0" index="0"]

texture = ExtResource( 19 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="world/meteors/meteor3_0" index="1"]

build_mode = 0
polygon = PoolVector2Array( -8.98529, -38.8713, -44.4754, -19.1546, -41.249, 15.26, -27.985, 32.4673, 20.0521, 39.6371, 43.7122, 0.920593, 29.0142, -28.1168 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="player" type="KinematicBody2D" parent="world" index="2"]

editor/display_folded = true
position = Vector2( 512, 300 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 20 )
_sections_unfolded = [ "Transform" ]

[node name="people" type="Sprite" parent="world/player" index="0"]

rotation = -1.5708
texture = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_bone_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="world/player" index="1"]

visible = false
position = Vector2( -0.263519, -1.84464 )
shape = SubResource( 1 )

[node name="left_push" type="Sprite" parent="world/player" index="2"]

visible = false
position = Vector2( -38.5, 0 )
rotation = 4.71239
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="right_push" type="Sprite" parent="world/player" index="3"]

visible = false
position = Vector2( 38.5, 0 )
rotation = 1.5708
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="top_push_right" type="Sprite" parent="world/player" index="4"]

visible = false
position = Vector2( 24, -16 )
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="top_push_left" type="Sprite" parent="world/player" index="5"]

visible = false
position = Vector2( -24, -16 )
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="down_push_right" type="Sprite" parent="world/player" index="6"]

visible = false
position = Vector2( 24, 16 )
rotation = -3.14159
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="down_push_left" type="Sprite" parent="world/player" index="7"]

visible = false
position = Vector2( -24, 16 )
rotation = -3.14159
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 22 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]


